--- a/Codsoft_Task1_Chatbot_Project_Colab.ipynb
+++ b/Codsoft_Task1_Chatbot_Project_Colab.ipynb
@@ -33,7 +33,7 @@
       },
       "source": [
         "# **Codsoft AI Internship - Sep-Oct 2023**\n",
-        "# **Author: Viraj Bhutada**\n",
+        "# **Author: Keshvi Ladhania**\n",
         "\n",
         "# Task 1: Building a Rule-Based Chatbot\n",
         "\n",
