Codsoft_Task2_TicTacToe_AI_Colab.ipynb

--- a/Codsoft_Task2_TicTacToe_AI_Colab.ipynb
+++ b/Codsoft_Task2_TicTacToe_AI_Colab.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "# **Codsoft AI Internship - Sep-Oct 2023**\n",
         "\n",
-        "# **Author: Viraj Bhutada**\n",
+        "# **Author: Keshvi Ladhania**\n",
         "\n",
         "# Task 2: Tic-Tac-Toe AI Implementation\n",
         "\n",
