--- a/Codsoft_Task3_Recommendation_System(movies).ipynb
+++ b/Codsoft_Task3_Recommendation_System(movies).ipynb
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Codsoft AI Internship - Sep-Oct 2023**\n",
-        "# **Author: Viraj Bhutada**\n",
+        "# **Author: Keshvi Ladhania**\n",
         "\n",
         "# Task 3: Building a Content-Based Movie Recommendation System\n",
         "**Description**: This project involves creating a content-based movie recommendation system. The system utilizes natural language processing and machine learning techniques to recommend movies to users based on their preferences. Unlike collaborative filtering, which relies on user-item interactions, content-based filtering leverages movie features such as genres, language, popularity, runtime, votes, and vote counts to make personalized recommendations."
